--- a/Abtem_lib.ipynb
+++ b/Abtem_lib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from pymatgen.io.ase import AseAtomsAdaptor\n",
     "from ase.visualize import view\n",
     "import ase\n",
+    "from ase.io.trajectory import Trajectory\n",
     "import math\n",
     "import abtem\n",
     "import numpy as np\n",
@@ -17,7 +18,8 @@
     "import os\n",
     "import abtem\n",
     "import pandas as pd\n",
-    "import plotly.express as px\n"
+    "import plotly.express as px\n",
+    "import matplotlib"
    ]
   },
   {
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,79 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def potential_build(ase_structure, energy, \n",
-    "                    slice_thickness = 1, parametrization=\"lobato\", \n",
-    "                    projection=\"finite\", resolution=1, gpts=None):\n",
-    "    \"\"\"Builds structure potential of either Atoms or Frozen Phonons obeject. Units given in Å and eV\n",
-    "    \n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    ase_structure : se.Atoms\n",
-    "        ase.Atoms object/objects of material\n",
-    "    energy: float or int\n",
-    "        Energy of electron wave given in eV. Standard values between 80,000 to 300,000 eV\n",
-    "    resolution: float or int\n",
-    "        Desired resolution of TEM image given in Å.\n",
-    "    parametrization: str\n",
-    "    projection: str\n",
-    "        either fintite or infinte\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    potential : abtem.Potential object\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    #If GPTS is defined, then sampling parameters are not calculated\n",
-    "    if gpts is None:\n",
-    "        #retrives sampling parameters\n",
-    "        Param = sampling_parameters(ase_structure = ase_structure, energy = energy, resolution = resolution)\n",
-    "        gpts = Param['gpts']\n",
-    "    #retrives sampling parameters\n",
-    "    Param = sampling_parameters(ase_structure = ase_structure, energy = energy, resolution = resolution)\n",
-    "    \n",
-    "    return abtem.Potential(ase_structure, gpts=gpts, parametrization=parametrization, \n",
-    "                           slice_thickness=slice_thickness, projection=projection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def TEM_exit_wave(potential, input_wave, compute = True):\n",
-    "    \"\"\"Returns an exit wave for an HRTEM simulation\n",
-    "    given input wave and potential object by using multislice approximation.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    potential : abtem.Potential object\n",
-    "        potential object with slice information\n",
-    "    input_wave: abtem.Waves\n",
-    "        abtem plane wave with given parameters\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    exit_wave: abtem.Waves\n",
-    "        exit electron wave\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    exit_wave = input_wave.multislice(potential)\n",
-    "    if compute:\n",
-    "        exit_wave.compute()\n",
-    "    return exit_wave\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,6 +295,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_snippet(atoms, start= (0.0, 0.0), end=None, plane: tuple[float, float] | str = \"xy\",\n",
+    "    ax: matplotlib.axes.Axes = None,\n",
+    "    scale: float = 0.75,\n",
+    "    title: str = None,\n",
+    "    numbering: bool = False,\n",
+    "    show_periodic: bool = False,\n",
+    "    figsize: tuple[float, float] = [10, 10],\n",
+    "    legend: bool = False,\n",
+    "    merge: float = 1e-2,\n",
+    "    tight_limits: bool = True,\n",
+    "    show_cell: bool = None):\n",
+    "    \"\"\"\n",
+    "    Display 2D projection of atoms as a matplotlib plot.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    atoms : ase.Atoms\n",
+    "        The atoms to be shown.\n",
+    "    start : two float or Atom, optional\n",
+    "        Start corner of the scan [Å]. May be given as fractional coordinate if `fractional=True`. Default is (0., 0.).\n",
+    "    end : two float or Atom, optional\n",
+    "        End corner of the scan [Å]. May be given as fractional coordinate if `fractional=True`.\n",
+    "        Default is None, the scan end point will match the extent of the potential.\n",
+    "    plane : str, two float\n",
+    "        The projection plane given as a concatenation of 'x' 'y' and 'z', e.g. 'xy', or as two floats representing the\n",
+    "        azimuth and elevation angles of the viewing direction [degrees], e.g. (45, 45).\n",
+    "    ax : matplotlib.axes.Axes, optional\n",
+    "        If given the plots are added to the axes.\n",
+    "    scale : float\n",
+    "        Factor scaling their covalent radii for the atom display sizes (default is 0.75).\n",
+    "    title : str\n",
+    "        Title of the displayed image. Default is None.\n",
+    "    numbering : bool\n",
+    "        Display the index of the Atoms as a number. Default is False.\n",
+    "    show_periodic : bool\n",
+    "        If True, show the periodic images of the atoms at the cell boundary.\n",
+    "    figsize : two int, optional\n",
+    "        The figure size given as width and height in inches, passed to `matplotlib.pyplot.figure`.\n",
+    "    legend : bool\n",
+    "        If True, add a legend indicating the color of the atomic species.\n",
+    "    merge: float\n",
+    "        To speed up plotting large numbers of atoms, those closer than the given value [Å] are merged.\n",
+    "    tight_limits : bool\n",
+    "        If True the limits of the plot are adjusted\n",
+    "    kwargs : Keyword arguments for matplotlib.collections.PatchCollection.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    matplotlib.figure.Figure, matplotlib.axes.Axes\n",
+    "    \"\"\"\n",
+    "    #start by moving the structure to have start at the origin\n",
+    "    X = atoms.cell[0][0] + atoms.cell[1][0]\n",
+    "    Y = atoms.cell[0][1] + atoms.cell[1][1]\n",
+    "    translation = np.array([-X*start[0], -Y*start[1], 0])\n",
+    "    vis_atoms = atoms.copy()\n",
+    "    vis_atoms.translate(translation) #translate the atoms to have start at the origin\n",
+    "\n",
+    "    x_dim  =end[0]-start[0]\n",
+    "    y_dim = end[1]-start[1]\n",
+    "\n",
+    "    #get the new X and Y cell coordinates:\n",
+    "    vis_atoms.cell[0][0] = atoms.cell[0][0]*(x_dim)\n",
+    "    vis_atoms.cell[1][1] = atoms.cell[1][1]*(y_dim)\n",
+    "\n",
+    "    return abtem.show_atoms(atoms=vis_atoms, plane=plane,\n",
+    "    ax=ax,\n",
+    "    scale =scale,\n",
+    "    title = title,\n",
+    "    numbering = numbering,\n",
+    "    show_periodic= show_periodic,\n",
+    "    figsize = figsize,\n",
+    "    legend = legend,\n",
+    "    merge = merge,\n",
+    "    tight_limits = tight_limits,\n",
+    "    show_cell = show_cell)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -373,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +678,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def potential_build(ase_structure, energy, \n",
+    "                    slice_thickness = 1, parametrization=\"lobato\", \n",
+    "                    projection=\"finite\", resolution=1, gpts=None):\n",
+    "    \"\"\"Builds structure potential of either Atoms or Frozen Phonons obeject. Units given in Å and eV\n",
+    "    \n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    ase_structure : se.Atoms\n",
+    "        ase.Atoms object/objects of material\n",
+    "    energy: float or int\n",
+    "        Energy of electron wave given in eV. Standard values between 80,000 to 300,000 eV\n",
+    "    resolution: float or int\n",
+    "        Desired resolution of TEM image given in Å.\n",
+    "    parametrization: str\n",
+    "    projection: str\n",
+    "        either fintite or infinte\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    potential : abtem.Potential object\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    #If GPTS is defined, then sampling parameters are not calculated\n",
+    "    if gpts is None:\n",
+    "        #retrives sampling parameters\n",
+    "        Param = sampling_parameters(ase_structure = ase_structure, energy = energy, resolution = resolution)\n",
+    "        gpts = Param['gpts']\n",
+    "    #retrives sampling parameters\n",
+    "    Param = sampling_parameters(ase_structure = ase_structure, energy = energy, resolution = resolution)\n",
+    "    \n",
+    "    return abtem.Potential(ase_structure, gpts=gpts, parametrization=parametrization, \n",
+    "                           slice_thickness=slice_thickness, projection=projection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def TEM_exit_wave(potential, input_wave, compute = True):\n",
+    "    \"\"\"Returns an exit wave for an HRTEM simulation\n",
+    "    given input wave and potential object by using multislice approximation.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    potential : abtem.Potential object\n",
+    "        potential object with slice information\n",
+    "    input_wave: abtem.Waves\n",
+    "        abtem plane wave with given parameters\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    exit_wave: abtem.Waves\n",
+    "        exit electron wave\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    exit_wave = input_wave.multislice(potential)\n",
+    "    if compute:\n",
+    "        exit_wave.compute()\n",
+    "    return exit_wave\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1149,7 @@
     "    \n",
     "    \"\"\"\n",
     "\n",
-    "    sampling_pam = sampling_parameters(ase_traj[0], energy = 300e3, resolution = resolution)\n",
+    "    sampling_pam = sampling_parameters(ase_traj[0], energy = energy, resolution = resolution)\n",
     "    #Make the ingoing plane wave:\n",
     "    plane_wave = abtem.PlaneWave(energy =sampling_pam['energy'],\n",
     "                                gpts = sampling_pam['gpts'],\n",
@@ -1116,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,9 +1211,9 @@
     "\n",
     "    parameters\n",
     "    ---------\n",
-    "    abtem_stack : abtem.Stack object\n",
+    "    abtem_stack : abtem.waves or abtem.measurements object\n",
     "        stack of all the exit waves/outcomes\n",
-    "        Can either be measurement/intensities only or exit waves\n",
+    "        Can either be measurement/intensities or exit waves/abtem.waves object\n",
     "    filename : str\n",
     "        name of the file to save the data to. The file will be saved in the current working directory in a folder called 'data'.\n",
     "        The file will be saved as a zarr file.\n",
@@ -1143,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "moire_course",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1185,5 +1270,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
